--- a/demo-sareen/Dockerfile
+++ b/demo-sareen/Dockerfile
@@ -10,7 +10,7 @@ RUN npm install -g npm@latest
 
 RUN npm install -g @medusajs/medusa-cli@latest
 
-RUN npm install --loglevel=error
+RUN npm install 
 
 COPY . .
 
